...
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"
            app:layout_constraintTop_toBottomOf="@id/tv_header_login"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            app:placeholderTextColor="@color/secondary"
            app:layout_constraintTop_toBottomOf="@id/tv_content_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="@dimen/content"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:placeholderTextColor="@color/secondary"
            app:layout_constraintTop_toBottomOf="@id/tf_email"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="@dimen/content"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingVertical="16dp"
            android:text="@string/login"
            android:textAllCaps="false"
...
